--- a/ios/Wallet/Info.plist
+++ b/ios/Wallet/Info.plist
@@ -57,6 +57,7 @@
 		<string>OpenSans-Bold.ttf</string>
 		<string>OpenSans-Regular.ttf</string>
 		<string>OpenSans-Semibold.ttf</string>
+		<string>OpenSans-Italic.ttf</string>
 	</array>
 </dict>
 </plist>
