--- a/ios/Wallet/Info.plist
+++ b/ios/Wallet/Info.plist
@@ -58,6 +58,7 @@
 		<string>OpenSans-Regular.ttf</string>
 		<string>OpenSans-Semibold.ttf</string>
 		<string>OpenSans-Italic.ttf</string>
+		<string>OpenSans-Light.ttf</string>
 	</array>
 </dict>
 </plist>
